changing base64 library + fixing bug